sign-up page 완료

--- a/Jungle-Academy/portfolio2/ware-valley.html
+++ b/Jungle-Academy/portfolio2/ware-valley.html
@@ -26,7 +26,7 @@
       <!-- container/wrapper/wrap 영역임 -->
       <div class="container">
         <h1 class="logo">
-          <a href="javascript:;">Ware<span>Valley</span></a>
+          <a href="ware-valley.html">Ware<span>Valley</span></a>
         </h1>
         <nav class="gnb">
           <ul class="gnb-menu">
@@ -110,7 +110,7 @@
         </a>
         <nav class="tnb">
           <a href="javascript:;"><i class="far fa-file-alt"></i> Warevalley Data</a>
-          <a href="javascript:;"><i class="fas fa-fingerprint"></i> Login</a>
+          <a href="sign-in.html"><i class="fas fa-fingerprint"></i> Login</a>
           <a href="javascript:;"><i class="fas fa-globe"></i> Language</a>
         </nav>
       </div>
