--- a/Jungle-Academy/portfolio2/sign-in.html
+++ b/Jungle-Academy/portfolio2/sign-in.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://unpkg.com/jquery@3"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/header-and-footer-subpagestyle.css">
   <link rel="stylesheet" href="css/sign-in.css">
   <title>login</title>
 </head>
@@ -14,7 +15,7 @@
     <!-- container/wrapper/wrap 영역임 -->
     <div class="container">
       <h1 class="logo">
-        <a href="javascript:;">Ware<span>Valley</span></a>
+        <a href="ware-valley.html">Ware<span>Valley</span></a>
       </h1>
       <nav class="gnb">
         <ul class="gnb-menu">
@@ -98,7 +99,7 @@
       </a>
       <nav class="tnb">
         <a href="javascript:;"><i class="far fa-file-alt"></i> Warevalley Data</a>
-        <a href="javascript:;"><i class="fas fa-fingerprint"></i> Login</a>
+        <a href="sign-in.html"><i class="fas fa-fingerprint"></i> Login</a>
         <a href="javascript:;"><i class="fas fa-globe"></i> Language</a>
       </nav>
     </div>
@@ -122,7 +123,7 @@
           트라이얼 버전 다운로드, 무료교육 등 웨어밸리에서 제공하는<br>
           다양한 서비스를 지원 받을 수 있습니다.
         </p>
-        <a href="javasctipt:;">회원가입</a>
+        <a href="sign-up.html">회원가입</a>
       </fieldset>
     </form>
   </section>
