utill p + img 대략 고침

--- a/Jungle-Academy/portfolio2/sign-up.html
+++ b/Jungle-Academy/portfolio2/sign-up.html
@@ -114,12 +114,12 @@
       <fieldset class="sign-up">
         <legend>회원가입</legend>
         <strong>다음(DAUM) 메일은 회원가입 이메일 인증이 원활하지 않습니다. 다른 메일을 이용해 주세요.</strong>
-        <span>필수입력</span>
-        <input type="text" required placeholder="이름">
+        <span>필수입력 <i class="fas fa-star-of-life"></i></span>
+        <input type="text" required placeholder="이름"></i>
         <div>
           <input type="email" required placeholder="이메일(아이디)">
-          <!-- 이메일(아이디)를 안쓰면 중복확인하라는 문구를 내보내고 싶음 -->
-          <button type="submit" required>중복 확인</button>
+          <!-- 중복확인하라는 문구를 내보내고 싶음 -->
+          <button required>중복 확인</button>
         </div>
         <input type="password" required placeholder="비밀번호">
         <input type="password" required placeholder="비밀번호 확인">
