스마트 교복 제이쿼리 추가

--- a/Jungle-Academy/portfolio1/main.html
+++ b/Jungle-Academy/portfolio1/main.html
@@ -350,11 +350,13 @@
 
   //부모님메뉴 오픈
   $(document).on('click', '#blue-gnb', function () {
+    $('.menu').removeClass('menu-active');
     $('.menu.parents').addClass('menu-active');
   });
 
   //학생들메뉴 오픈
   $(document).on('click','#pink-gnb',function(){
+    $('.menu').removeClass('menu-active');
     $('.menu.students').addClass('menu-active');
   });
 
