--- a/study/20190424/0424-01.html
+++ b/study/20190424/0424-01.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/0424-01.css">
   <title>Vogue Webzine</title>
-  <script src="js/jquery-3.4.0.min.js"></script>
-  <script src="js/jquery-ui.min.js"></script>
+  <script src="../js/jquery-3.4.0.min.js"></script>
+  <script src="../js/jquery-ui.min.js"></script>
   <script src="js/0424-01.js"></script>
 </head>
 <body>
