--- a/study/20190429/0429-01.html
+++ b/study/20190429/0429-01.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <title>Document</title>
-  <script src="js/jquery-3.4.0.min.js"></script>
-  <script src="js/jquery-ui.min.js"></script>
+  <script src="../js/jquery-3.4.0.min.js"></script>
+  <script src="../js/jquery-ui.min.js"></script>
 
   <style>
 
