--- a/Jungle-Academy/portfolio2/sign-up.html
+++ b/Jungle-Academy/portfolio2/sign-up.html
@@ -11,7 +11,7 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/header-and-footer-style.css">
   <link rel="stylesheet" href="css/sign-up.css">
-  <title>warevalley-sign-up</title>
+  <title>sign-up</title>
 </head>
 
 <body>
