--- a/Jungle-Academy/portfolio1/boy-and-girl-style.html
+++ b/Jungle-Academy/portfolio1/boy-and-girl-style.html
@@ -342,7 +342,14 @@
       </div>
       <!--  학생들메뉴 끝  -->
     </nav>
+    <div class="logo"></div>
+
+    <div class="hero">
+      <img src="img/sub-page/boy-and-girl-style/img_topbanner_style.png" alt="boy and girl top banner">
+    </div>
   </header>
+
+  <div class="test"></div>
 
 
   <footer>
@@ -356,11 +363,11 @@
       </div>
       <p>
         <span>(주)스마트에프앤디</span>
-        <span>대표자:윤경석</span>
+        <span>대표자 : 윤경석</span>
         <adredd>서울특별시 광진구 자양로116</adredd><br>
-        <span>소비자상담실<a href="" tel="080-900-3400">080-900-3400</a></span>
-        <span>등록번호:206-86-70883</span>
-        <span>대표번호:<a href="" tel="070-7492-0099">070-7492-0099</a></span>
+        <span>소비자상담실 <a href="" tel="080-900-3400">080-900-3400</a></span>
+        <span>등록번호 : 206-86-70883</span>
+        <span>대표번호 : <a href="" tel="070-7492-0099">070-7492-0099</a></span>
       </p>
       <p>
         COPYRIGHT &copy; 2019 S'FD. ALL RIGHTS RESERVED.
