--- a/Jungle-Academy/portfolio1/main.html
+++ b/Jungle-Academy/portfolio1/main.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Gothic+A1" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <script src="https://unpkg.com/jquery"></script>
   <title>브랜드파워1위 스마트교복</title>
@@ -343,6 +344,63 @@
       <!--  학생들메뉴 끝  -->
     </nav>
   </header>
+
+  <section class="intro-1">
+    <div class="logo"><img src="img/hero/bg1/img_logo.png" alt="logo"></div>
+    <div class="intro1-bg bg1">
+      <div class="left">
+        <div>
+          <h2>입는순간 인생셔츠<br><strong>샤방샤방 사방스판</strong>
+          </h2>
+          <p>교복 셔츠에 적용!<br>예쁜 디자인에 신축성까지<br>한여름 편안한 교복<br>오직 스마트에서만!
+          </p>
+          <div>
+            <img src="img/hero/bg1/img_mainslide_01_01.png" alt="design">
+            <img src="img/hero/bg1/img_mainslide_01_02.png" alt="design">
+            <img src="img/hero/bg1/img_mainslide_01_03.png" alt="design">
+          </div>
+        </div>
+      </div>
+      <div class="right"></div>
+      <img class="bg-img" src="img/hero/bg1/img_main_slide01.png" alt="bg1">
+    </div>
+    <div class="intro1-bg bg2">
+      <div class="left">
+        <div>
+          <h2>언제든지 <strong>착!</strong>한팬츠<br>
+            편안하게 <strong>착!</strong><br>
+            교복라인 <strong>착!</strong>
+          </h2>
+          <p>뛰어난 신축성 소재 폴리스판 사용!<br>
+            쾌속흡습기능! 편안함&gt;시원함 유지!
+          </p>
+          <div>
+            <img src="img/hero/bg1/img_mainslide_02_01.png" alt="design">
+            <img src="img/hero/bg1/img_mainslide_02_02.png" alt="design">
+          </div>
+        </div>
+      </div>
+      <div class="right"></div>
+      <img class="bg-img" src="img/hero/bg1/img_main_slide02.png" alt="">
+    </div> 
+    <div class="intro1-bg bg3">
+      <div class="left">
+        <div>
+          <h2>2018년도<br><strong>학교주관구매 1위 브랜드</strong></h2>
+          <img src="img/hero/bg1/img_main_slide03_01.png" alt="graph">
+        </div>
+      </div>
+      <div class="right"></div>
+      <img class="bg-img" src="img/hero/bg1/img_main_slide03.png" alt="">
+    </div>
+    <div class="intro1-bg bg4">
+      <div class="left"></div>
+      <div class="right"></div>
+      <img class="bg-img" src="img/hero/bg1/img_main_slide04.png" alt="design">
+      <img src="img/hero/bg1/img_main_slide04_01.png" alt="graph">
+    </div>
+
+  </section>
 </body>
 
 <script>
