--- a/Jungle-Academy/portfolio1/index.html
+++ b/Jungle-Academy/portfolio1/index.html
@@ -108,8 +108,7 @@
       $('#uniform-2').addClass('hide');
       $('.text-banner-pink').addClass('active');
       $('.logo').addClass('hide');
-      //skip btn 안먹힘
-      $('.skip').trigger('click');
+      location.href = 'main.html';
     })
     ;
     
