--- a/Jungle-Academy/portfolio1/main.html
+++ b/Jungle-Academy/portfolio1/main.html
@@ -347,7 +347,7 @@
 
   <section class="intro-1">
     <div class="logo"><img src="img/hero/bg1/img_logo.png" alt="logo"></div>
-    <div class="intro1-bg bg1">
+    <div class="intro1-bg bg1 show">
       <div class="left">
         <div>
           <h2>입는순간 인생셔츠<br><strong>샤방샤방 사방스판</strong>
