--- a/Jungle-Academy/portfolio1/main.html
+++ b/Jungle-Academy/portfolio1/main.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Gothic+A1" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
   <script src="https://unpkg.com/jquery"></script>
   <title>브랜드파워1위 스마트교복</title>
 </head>
@@ -16,10 +17,14 @@
     <nav class="gnb">
       <div class="gnb-menu">
         <a id="blue-gnb">
-          <span>부모님선생님정보통</span>
+          <span>
+            부모님<br>선생님<br>정보통
+          </span>
         </a>
         <a id="pink-gnb">
-          <span>학생들놀이터스마트</span>
+          <span>
+            학생들<br>놀이터<br>스마트
+          </span>
       </div>
 
       <!--  부모님메뉴 시작  -->
@@ -347,65 +352,197 @@
 
   <section class="intro-1">
     <div class="logo"><img src="img/hero/bg1/img_logo.png" alt="logo"></div>
-    <div class="intro1-bg bg1 show">
-      <div class="left">
-        <div>
-          <h2>입는순간 인생셔츠<br><strong>샤방샤방 사방스판</strong>
-          </h2>
-          <p>교복 셔츠에 적용!<br>예쁜 디자인에 신축성까지<br>한여름 편안한 교복<br>오직 스마트에서만!
-          </p>
+    <div class="intro-right-bg"></div>
+    <article class="intro1-wrap show">
+      <div class="intro1 bg1">
+        <div class="left">
           <div>
-            <img src="img/hero/bg1/img_mainslide_01_01.png" alt="design">
-            <img src="img/hero/bg1/img_mainslide_01_02.png" alt="design">
-            <img src="img/hero/bg1/img_mainslide_01_03.png" alt="design">
+            <h2>입는순간 인생셔츠<br><strong>샤방샤방 사방스판</strong>
+            </h2>
+            <p>교복 셔츠에 적용!<br>예쁜 디자인에 신축성까지<br>한여름 편안한 교복<br>오직 엔서만!
+            </p>
+            <div>
+              <img src="img/hero/bg1/img_mainslide_01_01.png" alt="design">
+              <img src="img/hero/bg1/img_mainslide_01_02.png" alt="design">
+              <img src="img/hero/bg1/img_mainslide_01_03.png" alt="design">
+            </div>
           </div>
         </div>
+        <div class="right"></div>
+        <img class="bg-img" src="img/hero/bg1/img_main_slide01.png" alt="bg1">
       </div>
-      <div class="right"></div>
-      <img class="bg-img" src="img/hero/bg1/img_main_slide01.png" alt="bg1">
-    </div>
-    <div class="intro1-bg bg2">
-      <div class="left">
-        <div>
-          <h2>언제든지 <strong>착!</strong>한팬츠<br>
-            편안하게 <strong>착!</strong><br>
-            교복라인 <strong>착!</strong>
-          </h2>
-          <p>뛰어난 신축성 소재 폴리스판 사용!<br>
-            쾌속흡습기능! 편안함&gt;시원함 유지!
-          </p>
+    </article>
+    <article class="intro1-wrap">
+      <div class="intro1 bg2">
+        <div class="left">
           <div>
-            <img src="img/hero/bg1/img_mainslide_02_01.png" alt="design">
-            <img src="img/hero/bg1/img_mainslide_02_02.png" alt="design">
+            <h2>언제든지 <strong>착!</strong>한팬츠<br>
+              편안하게 <strong>착!</strong><br>
+              교복라인 <strong>착!</strong>
+            </h2>
+            <p>뛰어난 신축성 소재 폴리스판 사용!<br>
+              쾌속흡습기능! 편안함&gt;시원함 유지!
+            </p>
+            <div>
+              <img src="img/hero/bg1/img_mainslide_02_01.png" alt="design">
+              <img src="img/hero/bg1/img_mainslide_02_02.png" alt="design">
+            </div>
           </div>
         </div>
+        <div class="right"></div>
+        <img class="bg-img" src="img/hero/bg1/img_main_slide02.png" alt="">
       </div>
-      <div class="right"></div>
-      <img class="bg-img" src="img/hero/bg1/img_main_slide02.png" alt="">
-    </div> 
-    <div class="intro1-bg bg3">
-      <div class="left">
-        <div>
-          <h2>2018년도<br><strong>학교주관구매 1위 브랜드</strong></h2>
-          <img src="img/hero/bg1/img_main_slide03_01.png" alt="graph">
+    </article> 
+    <article class="intro1-wrap">
+      <div class="intro1 bg3">
+        <div class="left">
+          <div>
+            <h2>2018년도<br><strong>학교주관구매 1위 브랜드</strong></h2>
+            <img src="img/hero/bg1/img_main_slide03_01.png" alt="graph">
+          </div>
         </div>
+        <div class="right"></div>
+        <img class="bg-img" src="img/hero/bg1/img_main_slide03.png" alt="">
       </div>
-      <div class="right"></div>
-      <img class="bg-img" src="img/hero/bg1/img_main_slide03.png" alt="">
+    </article>
+    <article class="intro1-wrap">
+      <!-- css 수정하기 -->
+      <div class="intro1 bg4">
+        <div class="left"></div>
+        <div class="right"></div>
+        <img class="bg-img" src="img/hero/bg1/img_main_slide04.png" alt="design">
+        <img src="img/hero/bg1/img_main_slide04_01.png" alt="graph">
+      </div>
+    </article>
+  </section>
+
+  <section class="style-introduce">
+    <article class="pretty-style">
+      <div>
+        <img src="img/hero/img_parallax01_1.png" alt="boy">
+      </div>
+      <div class="style-text-box">
+        <p><span>예쁜 교복</span>스타일</p>
+        <p>
+          스마트의 19년도 정복<br>
+          신상 스타일을 만나보세요.
+        </p>
+      </div>
+    </article>
+    <article class="comportable-style">
+      <div class="style-text-box">
+        <p><span>편한 교복</span>스타일</p>
+        <p>
+          불편함을 날릴 생활복, 체육복<br>
+          신상 스타일을 만나보세요.
+        </p>
+      </div>
+      <div>
+        <img src="img/hero/img_parallax02_1.png" alt="girl">
+      </div>
+    </article>
+  </section>
+
+  <span class="center-line"></span>
+
+  <section class="look-book">
+    <div>
+      <h2>교복의 프리스타일 <span>스마트 북</span></h2>
+      <div class="look-book-btn">
+        <a class="boy-look-btn" href="javascript:;">2019 소년룩북</a>
+        <a class="girl-look-btn" href="javascript:;">2019 소녀룩북</a>
+      </div>
     </div>
-    <div class="intro1-bg bg4">
-      <div class="left"></div>
-      <div class="right"></div>
-      <img class="bg-img" src="img/hero/bg1/img_main_slide04.png" alt="design">
-      <img src="img/hero/bg1/img_main_slide04_01.png" alt="graph">
+    <div class="list-wrap">
+      <article class="list boy on">
+        <div>
+          <img src="img/hero/img_mainroll_01_1.png" alt="boy">
+          <img src="img/hero/img_mainroll_02_1.png" alt="boy">
+          <img src="img/hero/img_mainroll_03_1.png" alt="boy">
+          <img src="img/hero/img_mainroll_04_1.png" alt="boy">
+          <img src="img/hero/img_mainroll_05_1.png" alt="boy">
+          <img src="img/hero/img_mainroll_06_1.png" alt="boy">
+          <img src="img/hero/img_mainroll_07_1.png" alt="boy">
+        </div>
+      </article>
+  
+      <article class="list girl">
+        <div>
+          <img src="img/hero/img_mainroll_girl_01_1.png" alt="girl">
+          <img src="img/hero/img_mainroll_girl_02_1.png" alt="girl">
+          <img src="img/hero/img_mainroll_girl_03_1.png" alt="girl">
+          <img src="img/hero/img_mainroll_girl_04_1.png" alt="girl">
+          <img src="img/hero/img_mainroll_girl_05_1.png" alt="girl">
+          <img src="img/hero/img_mainroll_girl_06_1.png" alt="girl">
+          <img src="img/hero/img_mainroll_girl_07_1.png" alt="girl">
+          <img src="img/hero/img_mainroll_girl_08_1.png" alt="girl">
+          <img src="img/hero/img_mainroll_girl_09_1.png" alt="girl">
+          <img src="img/hero/img_mainroll_girl_10_1.png" alt="girl">
+        </div>
+      </article>
     </div>
 
+    <div class="buttons">
+      <a class="prev-btn" href="javascript:;"><img src="img/btn_main_arrow_left.png" alt="prev_button"></a>
+      <a class="next-btn" href="javascript:;"><img src="img/btn_main_arrow_right.png" alt="next_button"></a>
+    </div>
   </section>
+  <span class="center-line sec3-4"></span>
+
+  <section class="smart-tv">
+    <h2>Smart tv<span>Ch. MX</span></h2>
+    <article>
+      <iframe width="1200" height="678" src="https://www.youtube.com/embed/VlFKo4AkpFA?version=2&amp;loop=1&amp;autohide=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;wmode=opaque&amp;autoplay=1" frameborder="0" id="video" allowfullscreen=""></iframe>
+    </article>
+    <article>
+      <a href="javascript:;">
+        <p><span>스마트 이벤트에</span>참여하세요</p>
+      </a>
+      <a href="javascript:;">
+        <p><span>2019 스마트 하복</span>몬스타엑스</p>
+      </a>
+      <a href="javascript:;">
+        <p><span>전국의</span>스마트 매장찾기</p>
+      </a>
+    </article>
+  </section>
+
+  <footer>
+    <div class="footer-snb">
+      <div>
+        <a href="https://www.facebook.com/smartzzang" class="snb-btn">
+          <img src="img/header, footer/ico_h_facebook.png"
+            alt="facebook">
+        </a>
+        <a href="https://story.kakao.com/ch/smartfnd" class="snb-btn">
+          <img src="img/header, footer/ico_h_story.png" alt="kakaostory">
+        </a>
+        <a href="https://www.youtube.com/channel/UC9Pfm_o3Y3OgtpFXUIvsV7w?feature=watch" class="snb-btn">
+          <img src="img/header, footer/ico_h_youtube.png" alt="youtube">
+        </a>
+        <a href="https://blog.naver.com/smartfnd" class="snb-btn">
+          <img src="img/header, footer/ico_h_nblog.png" alt="nblog">
+        </a>
+        <a href="https://www.instagram.com/ilovesmart/" class="snb-btn">
+          <img src="img/header, footer/ico_h_instargram.png"
+            alt="instagram">
+        </a>
+      </div>
+    </div>
+    <div>
+      <span>(주)스마트에프앤디</span>
+      <span>대표자 : 윤경석</span>
+      <span>서울특별시 광진구 자양로116</span><br>
+      <span>소비자상담실 <a href="javascript:;" tel="080-900-3400">080-900-3400</a></span>
+      <span>등록번호 : 206-86-70883</span>
+      <span>대표번호 <a href="javascript" tel="070-7492-0099">070-7492-0099</a></span>
+    </div>
+    <p>copyright &copy; 2019 s'fd. all rights reserved.</p>
+  </footer>
+
 </body>
 
 <script>
-  //메뉴 오픈 계속 클릭가능하게 하고싶음
-
   //부모님메뉴 오픈
   $(document).on('click', '#blue-gnb', function () {
     $('.menu').removeClass('menu-active');
@@ -422,6 +559,55 @@
   $(document).on('click','.closeBtn', function(){
     $('.menu').removeClass('menu-active');
   });
+
+  //intro1 bg효과
+  var slideTime = 2000;
+
+  function toggleSlideShow(){
+    var showElement = $('.intro1-wrap.show');
+    var nextElement = showElement.next('.intro1-wrap');
+
+    var allIntroWrap = $('.intro1-wrap');
+    allIntroWrap.removeClass('show');
+
+    console.log("nextEle",nextElement[0])
+
+    if(!nextElement[0]){
+      allIntroWrap.eq(0).addClass("show");
+    } else {
+      nextElement.addClass("show");
+    }
+  };
+
+  setInterval(toggleSlideShow, slideTime);
+  
+  false && $('.intro1-wrap').each(function(){
+    var $container = $(this);
+
+    function slideIntro1(){
+      var $intro1 = $container.find('.intro1');
+      var first = $intro1.eq(0);
+      var second = $intro1.eq(1);
+
+      first.removeClass('show').appendTo($container);
+      second.addClass('show');
+
+      first.toggleClass('show');
+    };
+
+    setInterval(slideIntro1, slideTime);
+  });
+
+  $('.boy-look-btn').on('click',function(){
+    $('.list').removeClass('on');
+    $('.list.boy').addClass('on');
+  });
+  
+  $('.girl-look-btn').on('click',function(){
+    $('.list').removeClass('on');
+    $('.list.girl').addClass('on')
+  });
+
 
 </script>
 
