--- a/Jungle-Academy/portfolio1/boy-and-girl-style.html
+++ b/Jungle-Academy/portfolio1/boy-and-girl-style.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="js/header.js"></script>
   <script src="https://unpkg.com/jquery"></script>
-  <link rel="stylesheet" href="css/headerandfooter.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/boy-and-girl-style.css">
   <title>Document</title>
 </head>
