--- a/Jungle-Academy/portfolio1/main.html
+++ b/Jungle-Academy/portfolio1/main.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Gothic+A1" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
   <script src="https://unpkg.com/jquery"></script>
   <title>브랜드파워1위 스마트교복</title>
@@ -507,37 +508,28 @@
     </article>
   </section>
 
+  
   <footer>
-    <div class="footer-snb">
+    <div class="footer-wrap">
       <div>
-        <a href="https://www.facebook.com/smartzzang" class="snb-btn">
-          <img src="img/header, footer/ico_h_facebook.png"
-            alt="facebook">
-        </a>
-        <a href="https://story.kakao.com/ch/smartfnd" class="snb-btn">
-          <img src="img/header, footer/ico_h_story.png" alt="kakaostory">
-        </a>
-        <a href="https://www.youtube.com/channel/UC9Pfm_o3Y3OgtpFXUIvsV7w?feature=watch" class="snb-btn">
-          <img src="img/header, footer/ico_h_youtube.png" alt="youtube">
-        </a>
-        <a href="https://blog.naver.com/smartfnd" class="snb-btn">
-          <img src="img/header, footer/ico_h_nblog.png" alt="nblog">
-        </a>
-        <a href="https://www.instagram.com/ilovesmart/" class="snb-btn">
-          <img src="img/header, footer/ico_h_instargram.png"
-            alt="instagram">
-        </a>
+        <img src="img/header, footer/ico_h_facebook.png" alt="facebook">
+        <img src="img/header, footer/ico_h_story.png" alt="story">
+        <img src="img/header, footer/ico_h_youtube.png" alt="youtube">
+        <img src="img/header, footer/ico_h_nblog.png" alt="nblog">
+        <img src="img/header, footer/ico_h_instargram.png" alt="instargram">
       </div>
+      <p>
+        <span>(주)스마트에프앤디</span>
+        <span>대표자 : 윤경석</span>
+        <adredd>서울특별시 광진구 자양로116</adredd><br>
+        <span>소비자상담실 <a href="" tel="080-900-3400">080-900-3400</a></span>
+        <span>등록번호 : 206-86-70883</span>
+        <span>대표번호 : <a href="" tel="070-7492-0099">070-7492-0099</a></span>
+      </p>
+      <p>
+        COPYRIGHT &copy; 2019 S'FD. ALL RIGHTS RESERVED.
+      </p>
     </div>
-    <div>
-      <span>(주)스마트에프앤디</span>
-      <span>대표자 : 윤경석</span>
-      <span>서울특별시 광진구 자양로116</span><br>
-      <span>소비자상담실 <a href="javascript:;" tel="080-900-3400">080-900-3400</a></span>
-      <span>등록번호 : 206-86-70883</span>
-      <span>대표번호 <a href="javascript" tel="070-7492-0099">070-7492-0099</a></span>
-    </div>
-    <p>copyright &copy; 2019 s'fd. all rights reserved.</p>
   </footer>
 
 </body>
