--- a/Jungle-Academy/level2-memo/memo.html
+++ b/Jungle-Academy/level2-memo/memo.html
@@ -171,10 +171,10 @@
 
     
     //가짜로 내용넣기
-    $('.memo-body .memo-title').val("안녕 난 타이틀")
-    $('.memo-body .memo-description').val('안녕 난 내용');
-    $('.memo-write .memo-body .memo-save').trigger('click');
-    $('.memo-write .memo-body .memo-save').trigger('click');
+    // $('.memo-body .memo-title').val("안녕 난 타이틀")
+    // $('.memo-body .memo-description').val('안녕 난 내용');
+    // $('.memo-write .memo-body .memo-save').trigger('click');
+    // $('.memo-write .memo-body .memo-save').trigger('click');
     //$('.memo-show .memo-body:last-child').attr('hover','');
     
     //호버 왜 안먹힘
