--- a/study/실습/20190521/Untitled-1.html
+++ b/study/실습/20190521/Untitled-1.html
@@ -61,9 +61,23 @@
             <p class="date">2019.05.01</p>
           </li>
         </ul>
+
+        <p class="title">반응형 웹강좌</p>
+        <div class="wrap-youtube">
+          <iframe width="788" height="443" src="https://www.youtube.com/embed/ZfaaUggm0gk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen name="video" frameborder="0">
+          </iframe>
+        </div>
+
+        <footer>
+            <p>Copyright 2019 &copy; jungle academy, All rights reserved.</p>
+        </footer>
       </div>
     </div>
   </div>
-  
+
+  <a class="next-btn">
+    <img src="img/btn.png" alt="스크롤">
+  </a>
+
 </body>
 </html>
