--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -16,14 +16,14 @@
   <header>
     <nav class="main-tnb">
       <ul class="tnb-wrap">
-        <li class="menu-bar" title="메뉴바 아이콘" aria-label="메뉴바 아이콘"><i class="fas fa-bars"></i><span class="text-ir">메뉴바 아이콘</span></li>
-        <li class="refresh"><i class="fas fa-redo"></i><span class="text-ir">새로고침 아이콘</span></li>
+        <li class="menu-bar"><i class="fas fa-bars"><span>메뉴바 아이콘</span></i></li>
+        <li class="refresh"><i class="fas fa-redo"><span>새로고침 아이콘</span></i></li>
         <!-- bell .on 을 넣으면 신호등 표시가 나옴 -->
-        <li class="bell"><i class="far fa-bell"></i><span class="text-ir">알림종 아이콘</span></li>
+        <li class="bell"><i class="far fa-bell"><span>알림종 아이콘</span></i></li>
         <li class="dash-board">
           <!-- float나 flex로 바꾸기 -->
           <input type="text" placeholder="Search Dashboard">
-          <a><i class="fas fa-search"></i><span class="text-ir">돋보기 아이콘</span></a>
+          <a><i class="fas fa-search"><span>돋보기 아이콘</span></i></a>
         </li>
       </ul>
 
@@ -32,7 +32,7 @@
         <div class="user-profile"><span class="text-ir">사용자프로필사진</span></div>     
         <ul class="user-info">
           <li>
-            <a href="javascript:;"><i class="fas fa-cogs"></i></i><span class="text-ir">사용자 정보</span></a>
+            <a href="javascript:;"><i class="fas fa-cogs"><span>사용자 정보</span></i></a>
             <ul>
               <li><a href="javascript:;">my account</a></li>
               <li><a href="javascript:;">my calendar</a></li>
