--- a/study/css수업/27th/accordionmenu.html
+++ b/study/css수업/27th/accordionmenu.html
@@ -26,7 +26,7 @@
 			border-bottom: 1px solid #2e2e2e;
 		}
 		#menu a.m {
-			background: #111;
+			/* background: #111; */
 			font-weight: bold;
 		}
 		#menu a.m.on {color: #fc73b2;}
