--- a/Jungle-Academy/portfolio1-smart/main.html
+++ b/Jungle-Academy/portfolio1-smart/main.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 뷰포트 width 수정함 -->
+  <meta name="viewport" content="width=1600, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Gothic+A1" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
