--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -10,7 +10,7 @@
   <script src="js/jquery-3.4.1.min.js"></script>
   <title>index/admin/portfolio</title>
   <!-- http://webarch.revox.io/3.0/html/index.html# -->
-  <!-- 5/20 1h, 5/21 20:30~1:00 4.5h, 5/22 22:00~ -->
+  <!-- 5/20 1h, 5/21 20:30~1:00 4.5h, 5/22 22:00~2:00 4hs -->
   <!-- 브라우저 크기 1600px -->
 </head>
 <body>
@@ -33,15 +33,15 @@
         <div class="user-profile"><span class="child-text-ir">사용자프로필사진</span></div>     
         <ul class="user-info">
           <li>
-            <a href="javascript:;"><i class="fas fa-cogs"><span class="child-text-ir">사용자 정보</span></i></a>
+            <a href="#"><i class="fas fa-cogs"><span class="child-text-ir">사용자 정보</span></i></a>
             <ul>
               <li id="triangle-border"><span class="child-text-ir">리스트표시디자인</span></li>
-              <li><a href="javascript:;">my account</a></li>
-              <li><a href="javascript:;">my calendar</a></li>
+              <li><a href="#">my account</a></li>
+              <li><a href="#">my calendar</a></li>
               <!-- inbox .notice 를 넣으면 신호등 표시가 나옴, 알림 개수는 contents에 적으면 적용됨 -->
-              <li class="inbox"><a href="javascript:;">my inbox</a></li>
+              <li class="inbox"><a href="#">my inbox</a></li>
               <li id="design-line-1"><span class="child-text-ir">라인표시디자인</span></li>
-              <li><a href="javascript:;"><i class="fas fa-power-off"><span class="child-text-ir">로그아웃 아이콘</span></i>log out</a></li>
+              <li><a href="#"><i class="fas fa-power-off"><span class="child-text-ir">로그아웃 아이콘</span></i>log out</a></li>
             </ul>
           </li>
         </ul>
@@ -53,9 +53,9 @@
         <div id="main-gnb-header-wrap">
           <h1>web<span><span class="child-text-ir">동그라미 아이콘</span></span><strong>Admin</strong></h1>
           <div>
-            <a href="javasctipt:;"><i class="fas fa-home"><span class="child-text-ir">홈 바로가기 아이콘</span></i></a>
+            <a href="#"><i class="fas fa-home"><span class="child-text-ir">홈 바로가기 아이콘</span></i></a>
             <!-- mail .notice 를 넣으면 신호등 표시가 나옴 -->
-            <a class="mail" href="javasctipt:;"><i class="fas fa-envelope"><span class="child-text-ir">메일 바로가기 아이콘</span></i></a>
+            <a class="mail" href="#"><i class="fas fa-envelope"><span class="child-text-ir">메일 바로가기 아이콘</span></i></a>
           </div>
         </div>
       </div>
@@ -74,141 +74,141 @@
 
         <ul id="main-gnb-menu">
           <li>
-            <a href="javascript:;">
+            <a href="#">
               <i class="fas fa-home"></i>
-              home
+              <span>home</span>
             </a>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
               <i class="fas fa-cube"></i>
-              widgets
+              <span>widgets</span>
             </a>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
               <i class="fas fa-envelope"></i>
-              email
+              <span>email</span>
             </a>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
               <i class="fab fa-ethereum"></i>
-              themes
+              <span>themes</span>
             </a>
             <ul>
-              <li><a href="javascript:;">coporate</a></li>
-              <li><a href="javascript:;">simple</a></li>
-              <li><a href="javascript:;">elegant</a></li>
+              <li><a href="#">coporate</a></li>
+              <li><a href="#">simple</a></li>
+              <li><a href="#">elegant</a></li>
             </ul>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
               <i class="fas fa-layer-group"></i>
-              layouts
+              <span>layouts</span>
               </a>
             <ul>
-              <li><a href="javascript:;">layout options</a></li>
-              <li><a href="javascript:;">boxed layout</a></li>
-              <li><a href="javascript:;">inner boxed layout</a></li>
-              <li><a href="javascript:;">extended layout</a></li>
-              <li><a href="javascript:;">RTL layout</a></li>
-              <li><a href="javascript:;">horizontal menu</a></li>
-              <li><a href="javascript:;">horizontal menu &amp; boxed</a></li>
+              <li><a href="#">layout options</a></li>
+              <li><a href="#">boxed layout</a></li>
+              <li><a href="#">inner boxed layout</a></li>
+              <li><a href="#">extended layout</a></li>
+              <li><a href="#">RTL layout</a></li>
+              <li><a href="#">horizontal menu</a></li>
+              <li><a href="#">horizontal menu &amp; boxed</a></li>
             </ul>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
               <i class="fas fa-tablet-alt"></i>
-              UI elements
+              <span>UI elements</span>
             </a>
             <ul>
-              <li><a href="javascript:;">typography</a></li>
-              <li><a href="javascript:;">messages &amp; notifications</a></li>
-              <li><a href="javascript:;">notifications</a></li>
-              <li><a href="javascript:;">icons</a></li>
-              <li><a href="javascript:;">buttons</a></li>
-              <li><a href="javascript:;">tabs &amp; accordions</a></li>
-              <li><a href="javascript:;">sliders</a></li>
-              <li><a href="javascript:;">group list</a></li>
+              <li><a href="#">typography</a></li>
+              <li><a href="#">messages &amp; notifications</a></li>
+              <li><a href="#">notifications</a></li>
+              <li><a href="#">icons</a></li>
+              <li><a href="#">buttons</a></li>
+              <li><a href="#">tabs &amp; accordions</a></li>
+              <li><a href="#">sliders</a></li>
+              <li><a href="#">group list</a></li>
             </ul>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
                 <i class="fas fa-share-square"></i>
-                forms
+                <span>forms</span>
               </a>
             <ul>
-              <li><a href="javascript:;">form elements</a></li>
-              <li><a href="javascript:;">form validations</a></li>
+              <li><a href="#">form elements</a></li>
+              <li><a href="#">form validations</a></li>
             </ul>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
                 <i class="fas fa-th"></i>
-                grids
+                <span>grids</span>
               </a>
             <ul>
-              <li><a href="javascript:;">simple grids</a></li>
-              <li><a href="javascript:;">draggable grids</a></li>
+              <li><a href="#">simple grids</a></li>
+              <li><a href="#">draggable grids</a></li>
             </ul>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
                 <i class="fas fa-th-list"></i>
-                tables
+                <span>tables</span>
               </a>
             <ul>
-              <li><a href="javascript:;">basic tables</a></li>
-              <li><a href="javascript:;">data tables</a></li>
+              <li><a href="#">basic tables</a></li>
+              <li><a href="#">data tables</a></li>
             </ul>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
                 <i class="fas fa-map-marker-alt"></i>
-                maps
+                <span>maps</span>
               </a>
             <ul>
-              <li><a href="javascript:;">google maps</a></li>
-              <li><a href="javascript:;">vector maps</a></li>
+              <li><a href="#">google maps</a></li>
+              <li><a href="#">vector maps</a></li>
             </ul>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
                 <i class="fab fa-sketch"></i>
-                extra
+                <span>extra</span>
               </a>
             <ul>
-              <li><a href="javascript:;">user profile</a></li>
-              <li><a href="javascript:;">time line</a></li>
-              <li><a href="javascript:;">support ticket</a></li>
-              <li><a href="javascript:;">gallery</a></li>
-              <li><a href="javascript:;">calendar</a></li>
-              <li><a href="javascript:;">search results</a></li>
-              <li><a href="javascript:;">invoice</a></li>
-              <li><a href="javascript:;">404 page</a></li>
-              <li><a href="javascript:;">500 page</a></li>
-              <li><a href="javascript:;">blank page</a></li>
-              <li><a href="javascript:;">login</a></li>
-              <li><a href="javascript:;">login v2</a></li>
-              <li><a href="javascript:;">lockscreen</a></li>
+              <li><a href="#">user profile</a></li>
+              <li><a href="#">time line</a></li>
+              <li><a href="#">support ticket</a></li>
+              <li><a href="#">gallery</a></li>
+              <li><a href="#">calendar</a></li>
+              <li><a href="#">search results</a></li>
+              <li><a href="#">invoice</a></li>
+              <li><a href="#">404 page</a></li>
+              <li><a href="#">500 page</a></li>
+              <li><a href="#">blank page</a></li>
+              <li><a href="#">login</a></li>
+              <li><a href="#">login v2</a></li>
+              <li><a href="#">lockscreen</a></li>
             </ul>
           </li>
           <li>
-            <a href="javascript:;">
+            <a href="#">
                 <i class="fas fa-ellipsis-h"></i>
-                manu levels
+                <span>menu levels</span>
               </a>
             <ul>
-              <li><a href="javascript:;">level 1</a></li>
-              <li><a href="javascript:;">level 2</a></li>
+              <li><a href="#">level 1</a></li>
+              <li><a href="#">level 2</a></li>
             </ul>
           </li>
         </ul>
       </div>
 
       <div>
-        <a href="javascript:;">원 ico</a>
+        <a href="#">원 ico</a>
       </div>
     </nav>
   </header>
