--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -38,7 +38,7 @@
               <li id="triangle-border"><span class="child-text-ir">리스트표시디자인</span></li>
               <li><a href="#">my account</a></li>
               <li><a href="#">my calendar</a></li>
-              <!-- inbox .notice 를 넣으면 신호등 표시가 나옴, 알림 개수는 contents에 적으면 적용됨 -->
+              <!-- inbox .notice 를 넣으면 신호등 표시가 나옴, 알림 개수는 content에 적으면 적용됨 -->
               <li class="inbox"><a href="#">my inbox</a></li>
               <li id="design-line-1"><span class="child-text-ir">라인표시디자인</span></li>
               <li><a href="#"><i class="fas fa-power-off"><span class="child-text-ir">로그아웃 아이콘</span></i>log out</a></li>
@@ -48,16 +48,14 @@
       </div>
     </nav>
 
-    <nav class="main-gnb">
+    <nav id="main-gnb">
       <div id="main-gnb-header">
-        <div id="main-gnb-header-wrap">
-          <h1>web<span><span class="child-text-ir">동그라미 아이콘</span></span><strong>Admin</strong></h1>
-          <div>
-            <a href="#"><i class="fas fa-home"><span class="child-text-ir">홈 바로가기 아이콘</span></i></a>
-            <!-- mail .notice 를 넣으면 신호등 표시가 나옴 -->
-            <a class="mail" href="#"><i class="fas fa-envelope"><span class="child-text-ir">메일 바로가기 아이콘</span></i></a>
-          </div>
-        </div>
+        <h1>web<span><span class="child-text-ir">동그라미 아이콘</span></span><strong>Admin</strong></h1>
+        <ul>
+          <li><a href="#"><i class="fas fa-home"><span class="child-text-ir">홈 바로가기 아이콘</span></i></a></li>
+          <!-- mail .notice 를 넣으면 신호등 표시가 나옴 -->
+          <li><a class="mail" href="#"><i class="fas fa-envelope"><span class="child-text-ir">메일 바로가기 아이콘</span></i></a></li>
+        </ul>
       </div>
 
       <div id="main-gnb-contents">
