때에따라 바뀌는 것은 영역만 만들어놓으면 됌

--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -61,7 +61,7 @@
       <div id="main-gnb-contents">
         <div id="gnb-user-profile">
           <!-- user-profile .notice 를 넣으면 신호등 표시가 나옴 -->
-          <!-- 사용자 사진도 때에따라 바껴야하는데 어떻게? -->
+          <!-- 회원 프로필 사진영역 -->
           <div class="user-profile">
             <span class="child-text-ir">사용자프로필사진</span>
           </div>
